# conker-detect

./: .gitignore  AUDIT_STANDARD.md  BUILD_PLAN.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: causal_demo_adapter.py  dormant_attack_campaign.json  packed_cache_demo_adapter.py
examples/parameter-golf-pr998-replacement-2026-03-29/: README.md  handoff_result.json  provenance_manifest.json
examples/parameter-golf-pr998-replacement-2026-03-29/handoff/: ledger_manifest.json
examples/parameter-golf-pr998-replacement-2026-03-29/source_submission/: README.md  results.json  submission.json  train_gpt.py
scripts/: sweep_parameter_golf_prs.py
src/conker_detect/: __init__.py  activation_probes.py  attack.py  audit.py  cli.py  handoff.py  leakage.py  ledger_handoff.py  legality.py  priors.py  provenance.py  regimes.py  replay.py  submission.py  submission_checks.py  submission_extract.py  submission_profiles.py  trace_schema.py  trigger.py
src/conker_detect/providers/: __init__.py  jsinfer_provider.py
tests/: test_activation_probes.py  test_attack.py  test_audit.py  test_cli.py  test_handoff.py  test_jsinfer_provider.py  test_leakage.py  test_legality.py  test_legality_trace.py  test_priors.py  test_provenance.py  test_regimes.py  test_replay.py  test_submission.py  test_trigger.py
tests/fixtures/: trigger_attack_campaign.json  trigger_case_lhs.json  trigger_case_rhs.json  trigger_case_shared.json  trigger_provider.py  trigger_provider_config.json
