[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conker-detect"
version = "0.1.0"
description = "Lightweight structural and behavioral audits for hidden side channels, causal-mask violations, and runtime legality."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]
authors = [
  { name = "asuramaya" }
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
conker-detect = "conker_detect.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
